[package]
name = "ptcow"
version = "0.2.0"
edition = "2024"
description = "Library for editing and playback of PxTone (.ptcop) music"
repository = "https://github.com/crumblingstatue/ptcow"
keywords = ["music", "pxtone", "pixel", "ptcop"]
license = "0BSD"
rust-version = "1.88"

[features]
default = ["oggv"]
oggv = ["dep:vorbis_rs"]

[dependencies]
arrayvec = "0.7.6"
bitflags.workspace = true
bytemuck.workspace = true
encoding_rs = "0.8"
thiserror = "2"
vorbis_rs.version = "0.5.5"
vorbis_rs.optional = true
vorbis_rs.default-features = false

[profile.dev]
debug = "line-tables-only"
opt-level = 1

[lints]
workspace = true

[workspace]
members = ["crates/ptmoo", "crates/ser-test"]

[workspace.dependencies]
bytemuck.version = "1.24"
bytemuck.features = ["derive", "extern_crate_alloc"]
clap.version = "4.5"
clap.features = ["derive"]
bitflags.version = "2.10"
bitflags.features = ["bytemuck"]

[workspace.lints.rust]
missing_docs = "warn"
redundant_imports = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
