[package]
name = "ptcow"
version = "0.4.0"
edition = "2024"
description = "Library for editing and playback of PxTone (.ptcop) music"
repository = "https://github.com/crumblingstatue/ptcow"
keywords = ["music", "pxtone", "pixel", "ptcop"]
license = "0BSD"
rust-version = "1.88"

[features]
default = ["oggv"]
oggv = [
    "dep:symphonia-core",
    "dep:symphonia-format-ogg",
    "dep:symphonia-codec-vorbis",
]
testing = []

[dependencies]
arrayvec = "0.7.6"
bitflags.workspace = true
bytemuck.workspace = true
encoding_rs = "0.8"
thiserror = "2"
symphonia-core.optional = true
symphonia-core.version = "0.5.5"
symphonia-format-ogg.optional = true
symphonia-format-ogg.version = "0.5.5"
symphonia-codec-vorbis.optional = true
symphonia-codec-vorbis.version = "0.5.5"

[profile.dev]
debug = "line-tables-only"
opt-level = 1

[lints]
workspace = true

[workspace]
members = ["crates/ptmoo", "crates/pttest", "crates/ser-test"]

[workspace.dependencies]
bytemuck.version = "1.25"
bytemuck.features = ["derive", "extern_crate_alloc"]
clap.version = "4.5"
clap.features = ["derive"]
bitflags.version = "2.11"
bitflags.features = ["bytemuck"]

[workspace.lints.rust]
missing_docs = "warn"
redundant_imports = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
