[package]
name = "ptmoo"
version = "0.2.0"
edition = "2024"

[features]
oggv = ["ptcow/oggv"]

[dependencies]
bytemuck.workspace = true
clap.workspace = true
ctrlc = "3.5"
string-width = "0.1"
ptcow.path = "../../"
crossterm.version = "0.29"
crossterm.default-features = false

[lints]
workspace = true
